# patchwork-python

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: api.md  index.md
patchwork/: __init__.py  _constants.py  _datasets.py  _display.py  _download.py  _ggplot_attrs.py  _gt_bridge.py  _gtable_state.py  _patch.py  _registry.py  _utils.py  add_plot.py  annotation.py  arithmetic.py  collect_axes.py  core.py  free.py  guide_area.py  guides.py  inset.py  layout.py  merge.py  multipage.py  spacer.py  wrap_elements.py  wrap_ggplot_grob.py  wrap_plots.py  wrap_table.py
tests/: conftest.py  test_annotate_heights.py  test_annotation.py  test_arithmetic.py  test_arithmetic_r_parity.py  test_collect.py  test_collect_r_parity.py  test_datasets.py  test_display.py  test_fixed_aspect.py  test_free.py  test_gt_bridge.py  test_guides_collect_paths.py  test_layout.py  test_layout_r_parity.py  test_merge.py  test_multipage.py  test_patch.py  test_patchwork_dunders.py  test_render.py  test_set_dim_render.py  test_snapshot.py  test_tutorials_execute.py  test_utils.py  test_wrap_elements.py  test_wrap_ggplot_grob.py  test_wrap_plots.py  test_wrap_table_panels.py
tests/_snapshots/: annotated.tsv  design_string.tsv  gen_gold.R  nested.tsv  tagged.tsv  two_plus.tsv  wrap_four.tsv
tutorials/: annotation.ipynb  assembly.ipynb  layout.ipynb  multipage.ipynb  patchwork.ipynb
