[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patchwork-python"
version = "1.3.2.9000+6b1d88c"
description = "Python port of the R patchwork package"
requires-python = ">=3.10"
license = "Artistic-2.0"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]
docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material", "mkdocs-jupyter"]

[tool.hatch.build.targets.wheel]
packages = ["patchwork", "tutorials"]

[tool.pytest.ini_options]
testpaths = ["tests"]
