[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patchwork-python"
version = "1.3.2.9000"
description = "Python port of the R patchwork package"
requires-python = ">=3.10"
license = "Artistic-2.0"
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "ggplot2-python>=4.0",
    "rgrid-python>=4.5.3",
    "gtable-python>=0.3.6",
    "scales-python>=1.4",
]

[project.optional-dependencies]
tables = ["great_tables>=0.16"]   # required by wrap_table()
dev = ["pytest", "pytest-cov", "ruff"]
docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material", "mkdocs-jupyter"]

[tool.hatch.build.targets.wheel]
packages = ["patchwork", "tutorials"]

[tool.pytest.ini_options]
testpaths = ["tests"]
